Cibyl (15)
	* Initial work on the Qemu proxy server and debug support.

	* Fixed bug in the register value tracking - it needs to
	invalidate registers on basic block entry *and* exit (branch), not
	just on entry. Well, well.

	* Make -O2 the default optimization level. The "Kings Quest I
	enter into castle" bug in Sarien is actually fixed by this. Looks
	like a GCC bug.

	* Corrected various syscall stuff,  isinff name (was isnanf...),
	some of the softfloat functions are not implemented in J2ME,
	cannot create OutputStream (abstrac) etc

	-- Simon Kagstrom <simon.kagstrom@gmail.com>

Cibyl (14)
	* More peephole optimizations: move constant assignments past
	memory pushing (to simplify other peephole optimizations), better
	support for catching double stores

	* Push a local variable as memory reference instead of the static
	CRunTime.memory each time. This saves 1-2 byte on each memory
	access, and perhaps improves speed a bit as well.

	* Implemented (partially) a register value tracker. This can for
	example make a fairly big difference when reading or storing
	values at constant memory locations - the address calculation can
	then be made completely constant.

	* Small bug in the java syscall generator fixed

	* Callback handling has been generalized. Java startup now
	publishes "callback interfaces" in the form of a string and gets
	an integer handle back. C code registers callback functions as
	(string, fnPtr) pairs. Invoking callbacks are done through the
	handle returned in the publish phase.

	The main motivation behind this support is to avoid global
	#defines and Java constants. Especially for Google android
	support, which relies heavily on abstract methods, this is
	improves maintainability of the code

	* Implemented GDB interruptions (Ctrl-C) in the gdb server

	* Fixed bug in instruction.py where -g would still skip
	loads/stores to RA

	* cibyl-mips2java: Force single class if -g is specified (needed
	by the GDB server)
